adding base files on new angular projects to git

--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "tour-of-heros"
+    }
+  },
+  "defaultProject": "tour-of-heros",
+  "cli": {
+    "analytics": false
+  }
 }
